[gd_scene load_steps=9 format=3 uid="uid://imjgnyl3rwdq"]

[ext_resource type="Script" path="res://scripts/credits_menu.gd" id="1_t1pks"]
[ext_resource type="Texture2D" uid="uid://cchjkwgyb2xj5" path="res://assets/Background Images/Skybox.png" id="2_dtmkh"]
[ext_resource type="Texture2D" uid="uid://d3xwnctul0ble" path="res://assets/Background Images/Mountain.png" id="3_ef4um"]
[ext_resource type="Texture2D" uid="uid://dq0uwdxc8o3aq" path="res://assets/Background Images/Trees.png" id="4_th8fx"]
[ext_resource type="Texture2D" uid="uid://cnrhgk2juqua7" path="res://assets/Background Images/Road.png" id="5_haf05"]
[ext_resource type="FontFile" uid="uid://dyni14hwwignh" path="res://assets/fonts/Free_Pixel_Font_Devilsworkshop_v01/ThickThinPixel.ttf" id="6_r7x53"]
[ext_resource type="Script" path="res://scripts/start_button.gd" id="8_3qcge"]

[sub_resource type="Gradient" id="Gradient_gwsa5"]
offsets = PackedFloat32Array(0, 0.556667, 1)
colors = PackedColorArray(0.900526, 0.900526, 0.900526, 1, 0.51, 0.51, 0.51, 1, 1, 1, 1, 1)

[node name="Credits" type="Node2D"]
script = ExtResource("1_t1pks")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dtmkh")

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ef4um")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_th8fx")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_haf05")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -62.0
offset_right = 250.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_r7x53")
theme_override_font_sizes/font_size = 16
text = "HI-SCORE: 0"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_r7x53")
theme_override_font_sizes/font_size = 64
text = "CREDITS:"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="Credit" type="Label" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_r7x53")
theme_override_font_sizes/font_size = 16
text = "Game Director :  Angel Santiago"
horizontal_alignment = 1

[node name="Credit4" type="Label" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_r7x53")
theme_override_font_sizes/font_size = 16
text = "Game Art:  Angel Santiago"
horizontal_alignment = 1

[node name="Credit2" type="Label" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_r7x53")
theme_override_font_sizes/font_size = 16
text = "Composer:  Samjib"
horizontal_alignment = 1

[node name="Credit3" type="Label" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_r7x53")
theme_override_font_sizes/font_size = 16
text = "SFX Artist:  artisticdude"
horizontal_alignment = 1

[node name="Credit5" type="Label" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_r7x53")
theme_override_font_sizes/font_size = 16
text = "Font Artist: Ajay Karat"
horizontal_alignment = 1

[node name="Credit6" type="Label" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_r7x53")
theme_override_font_sizes/font_size = 16
text = "Projectile Sprites:  Gustavo Vituri"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_r7x53")
action_mode = 0
text = "PLAY"
script = ExtResource("8_3qcge")

[node name="BackButton" type="Button" parent="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_r7x53")
action_mode = 0
text = "BACK  TO MENU"

[node name="MenuAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true

[node name="LaserLine" type="Line2D" parent="."]
unique_name_in_owner = true
z_index = -1
width = 2.0
default_color = Color(0, 0.913725, 0.27451, 1)
gradient = SubResource("Gradient_gwsa5")

[connection signal="pressed" from="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/NinePatchRect/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
